kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-project
  labels:
    app: devops-project
