kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin2-web
  namespace: admin2
spec:
  selector:
    app: admin2-web
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
