kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-project-web
  namespace: devops-project
spec:
  ingressClassName: nginx
  rules:
    - host: devops-project.local
      http:
        paths:
          - path: /devops-project/api
            pathType: Prefix
            backend:
              service:
                name: devops-project-backend
                port:
                  number: 80
          - path: /devops-project
            pathType: Prefix
            backend:
              service:
                name: devops-project-frontend
                port:
                  number: 80
